--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     username: root
-    password: root
+    password: 123qwe,.
   zip-kin:
     base-url: http://localhost:9411
     sleuth:
@@ -24,7 +24,8 @@ eureka:
     register-with-eureka: true
     service-url:
       #defaultZone: http://www.eureka7001.com:7001/eureka/,http://www.eureka7002.com:7002/eureka/
-      defaultZone: http://www.eureka7001.com:7001/eureka/
+#      defaultZone: http://www.eureka7001.com:7001/eureka/
+      defaultZone: http://localhost:7001/eureka/
   instance:
     instance-id: payment8001
     prefer-ip-address: true
